# Flask_project_blog

./: .gitignore  Dockerfile  Makefile  app.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test1.py  wsgi.py
.github/: README.md
.github/Documentation/: flask form.md  flask logger.md  flask view.md  static.md  template.md  контекст.md  ⚙️ config.md  🍎 Инициализация приложения.md  💬 flash.md  💾 flask db.md  💾 flask migration.md  💾 flask models.md  💾 flask shell.md  💾 flask определение БД.md  💾 загрузка файла.md  💾 ⚙️ flask - connect data base.md  📚 alembic.md  🔀 blueprint.md  🔀 request.md  🔀 response.md  🔀 routing.md  🔀 url.md  🔀 сессии.md  🖼️ werkzeug.md  🚀 flask - run.md  🚀 getting started.md  🧩 Расширения.md  🧩👤 flask-login.md  🧩👤 hash password.md  🧩👤 login.md  🧩👤 logout.md  🧩👤 загрузчика.md  🧩👤 модель пользователя.md  🧩👤 ограничение доступа.md  🧩👤 показать.md  🧩👤 регистрация пользователя.md
app/: __init__.py  apispec_gen.py  app.db  commands.py  config.py  models.py  swagger.json  views.py
app/admin/: __init__.py  views.py
app/api/: article.py  author.py  tag.py  user.py
app/article/: __init__.py  forms.py  views.py
app/main/: views.py
app/schemas/: __init__.py  article.py  author.py  tag.py  user.py
app/static/: swagger.yaml
app/templates/: confirme_delete.html  deleted_successfully.html  navbar.html
app/tests/: conftest.py
article/: app.py  views.py
blog/: app.py  views.py
dockerfiles/: Dockerfile  Dockerfile_old  docker-compose.yaml  docker-entrypoint.sh
templates/: base.html  navbar.html
user/: app.py  views.py
(+26 files in other folders)
